docs(release): refresh markdown guides and finalize Gradle wrapper flow